--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,12 +1,17 @@
 .header {
     width: 1130px;
     height: 52px;
-    background-color: gray;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
 .logo {
-    margin: 20px;
+    margin: 40px;
+    color: green;
+    font-size: 20px;
+}
+
+.loginBtn {
+    margin-right: 20px;
 }
