--- a/src/Components/LandingPage/LandingPage.css
+++ b/src/Components/LandingPage/LandingPage.css
@@ -1,7 +1,19 @@
 .landingPage {
     width: 690px;
-    background-color: green;
     margin: 0 200px;
     padding: 0 20px;
     height: 100vh;
+    flex-direction: column;
 }
+
+.landingPage > .addBtn {
+    width: 670px;
+    margin: 0 10px;
+    border: 3px solid green;
+    border-radius: 5px;
+    margin-bottom: 30px;
+    text-decoration:none;
+}
+
+a:link { color: black; }
+a:visited { color: black; }
