--- a/src/Components/MakeStudy/MakeStudy.css
+++ b/src/Components/MakeStudy/MakeStudy.css
@@ -2,7 +2,7 @@
     width: 690px;
     margin: 0 200px;
     padding: 0 20px;
-    background-color: green;
+    background-color: #D7EAA3;
     border-radius: 5px;
     padding-top: 30px;
     display: flex;
