--- a/src/Components/LandingPage/LandingPage.css
+++ b/src/Components/LandingPage/LandingPage.css
@@ -9,7 +9,7 @@
 .landingPage > .addBtn {
     width: 670px;
     margin: 0 10px;
-    border: 3px solid green;
+    border: 3px solid #D7EAA3;
     border-radius: 5px;
     margin-bottom: 30px;
     text-decoration:none;
