--- a/src/Components/MyPage/MyPage.css
+++ b/src/Components/MyPage/MyPage.css
@@ -16,7 +16,7 @@
 
 .friends {
     margin-top: 50px;
-    width: 690px;
+    width: 100%;
     height: 400px;
     background-color: white;
     overflow-x: auto;
@@ -58,7 +58,6 @@
     padding: 5px 0;
 }
 
-.imgTitle {
-    width: 40px;
-    height: 40px;
+.table {
+    min-width: 1080;
 }
