--- a/src/Components/MyPage/MyPage.css
+++ b/src/Components/MyPage/MyPage.css
@@ -12,14 +12,7 @@
 .MyPageTop {
     display: flex;
     justify-content: space-around;
-}
-
-.friends {
-    margin-top: 50px;
-    width: 100%;
-    height: 400px;
-    background-color: white;
-    overflow-x: auto;
+    margin-bottom: 50px;
 }
 
 .image {
@@ -56,6 +49,7 @@
     background-color: #9ebf44;
     border: 1px solid black;
     padding: 5px 0;
+    margin-bottom: 0;
 }
 
 .table {
