--- a/src/Components/SearchMenu/SearchMenu.css
+++ b/src/Components/SearchMenu/SearchMenu.css
@@ -38,3 +38,9 @@ input:focus {
     width: 1130px;
     height: 40px;
 }
+
+.searchBtn {
+    border: 3px solid black;
+    border-radius: 5px;
+    padding: 5px;
+}
