--- a/src/Components/MakeStudy/MakeStudy.css
+++ b/src/Components/MakeStudy/MakeStudy.css
@@ -108,7 +108,7 @@
 .Online {
     width: 500px;
     height: 400px;
-    background-color: green;
+    background-color: #D7EAA3;
 }
 
 .finishBtn {
