--- a/src/Components/MyPage/MyPage.css
+++ b/src/Components/MyPage/MyPage.css
@@ -1,6 +1,6 @@
 .MyPage {
     width: 690px;
-    height: 550px;
+    height: 600px;
     background-color: #D7EAA3;
     margin: 0 200px;
     padding: 0 20px;
@@ -12,7 +12,7 @@
 .MyPageTop {
     display: flex;
     justify-content: space-around;
-    margin-bottom: 50px;
+    margin-bottom: 20px;
 }
 
 .image {
@@ -48,10 +48,18 @@
 .friendsTitle {
     background-color: #9ebf44;
     border: 1px solid black;
-    padding: 5px 0;
     margin-bottom: 0;
+    display: flex;
+    justify-content: space-between;
+    padding: 0 10px;
+    height: 40px;
+    align-items: center;
 }
 
 .table {
     min-width: 1080;
+}
+
+.updateBtn {
+    margin-bottom: 50px;
 }
