--- a/src/Components/InfoUpdate/InfoUpdate.css
+++ b/src/Components/InfoUpdate/InfoUpdate.css
@@ -44,7 +44,8 @@
     padding: 8px 12px;
     border-radius: 5px;
     border: 2px solid black;
-    margin: 10px auto;
+    margin-top: 10px;
+    margin-left: 10px;
 }
 
 input {
@@ -55,3 +56,21 @@ input:focus {
     outline: none;
 }
 
+.fileUpdate {
+    margin-left: 10px;
+    margin-top: 40px;
+}
+
+.tagBox {
+    width: 125px;
+    height: 20px;
+    display: flex;
+    padding: 8px 0px;
+    margin-top: 10px;
+    align-items: center;
+}
+
+.tagBox > .inputUpdate {
+    margin-top: 0px;
+    margin-right: 20px;
+}
