--- a/src/Components/InfoUpdate/InfoUpdate.css
+++ b/src/Components/InfoUpdate/InfoUpdate.css
@@ -8,8 +8,8 @@
 }
 
 .inModal {
-    width: 600px;
-    height: 530px;
+    width: 700px;
+    height: 630px;
     background-color: white;
     position: relative;
     box-sizing: border-box;
@@ -28,7 +28,7 @@
 .modalContents {
     margin: 0 auto;
     width: 100%;
-    height: 450px;
+    height: 560px;
     background-color: #D7EAA3;
     position: relative;
     box-sizing: border-box;
@@ -44,8 +44,7 @@
     padding: 8px 12px;
     border-radius: 5px;
     border: 2px solid black;
-    margin-top: 10px;
-    margin-left: 10px;
+    margin: 10px;
 }
 
 input {
@@ -59,18 +58,9 @@ input:focus {
 .fileUpdate {
     margin-left: 10px;
     margin-top: 40px;
+    width: 200px;
 }
 
-.tagBox {
-    width: 125px;
-    height: 20px;
-    display: flex;
-    padding: 8px 0px;
-    margin-top: 10px;
-    align-items: center;
-}
-
-.tagBox > .inputUpdate {
-    margin-top: 0px;
-    margin-right: 20px;
+.modalTag {
+    margin-bottom: 10px;
 }
