--- a/src/Components/KakaoMap/KakaoMap.css
+++ b/src/Components/KakaoMap/KakaoMap.css
@@ -1,8 +1,9 @@
 .map {
-    width: 500px;
-    height: 400px;
+    width: 400px;
+    height: 300px;
     background-color: black;
     margin: 0 auto;
+    border-radius: 5px;
 }
 
 .title {
