--- a/src/Components/KakaoMap/KakaoMap.css
+++ b/src/Components/KakaoMap/KakaoMap.css
@@ -4,6 +4,8 @@
     background-color: black;
     margin: 0 auto;
     border-radius: 5px;
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
 
 .title {
