--- a/src/Components/InfoUpdate/InfoUpdate.css
+++ b/src/Components/InfoUpdate/InfoUpdate.css
@@ -57,6 +57,36 @@ input:focus {
 
 .fileUpdate {
     margin-left: 10px;
-    margin-top: 40px;
+    margin-top: 20px;
     width: 200px;
+}
+
+.h {
+    display: flex;
+    margin: 0 10px;
+    border-radius: 5px;
+    background-color: white;
+    border: 1px solid black;
+    padding: 3px 10px;
+}
+
+.modalTag {
+    display: flex;
+    width: 300px;
+    overflow-x: scroll;
+    margin: auto;
+}
+
+.tag-del {
+    margin-left: 10px;
+}
+
+.modal-updateBtn {
+    margin-bottom: 50px;
+    width: 100px;
+    margin: 20px auto;
+    border: 1px solid black;
+    border-radius: 5px;
+    background-color: white;
+    padding: 5px 10px;
 }
