--- a/src/Components/KakaoLogin/KakaoLogin.css
+++ b/src/Components/KakaoLogin/KakaoLogin.css
@@ -1,11 +1,12 @@
 .mainView {
-    width: 300px;
+    width: 220px;
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .mainView > a {
-    width: 140px;
+    width: 100px;
     border: 2px solid #D7EAA3;
     border-radius: 5px;
     text-decoration:none;
