--- a/src/Components/SearchMenu/SearchMenu.css
+++ b/src/Components/SearchMenu/SearchMenu.css
@@ -1,22 +1,32 @@
 .search {
-    display: flex;
+    display: inline;
     align-items: center;
     justify-content: space-around;
-    width: 1130px;
+    width: 500px;
     flex-flow: wrap;
+    height: 50px;
 }
 
-.parent-category, .child-category {
-    width: 125px;
-    height: 20px;
-    padding: 8px 12px;
-    border-radius: 5px;
-    border: 2px solid #D7EAA3;
+.select-box {
+    width: 500px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 5px;
+    padding: 0px 10px
 }
 
-.study-name, .hashtag {
-    width: 229px;
-    height: 20px;
+.search-box {
+    width: 500px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0px 10px;
+}
+
+.study-name{
+    width: 400px;
+    height: 38px;
     padding: 8px 12px;
     border-radius: 5px;
     border: 2px solid #D7EAA3;
@@ -34,13 +44,9 @@ input:focus {
     float: right;
 }
 
-.tags {
-    width: 1130px;
-    height: 40px;
-}
-
 .searchBtn {
     border: 3px solid black;
     border-radius: 5px;
     padding: 5px;
+    margin: 0;
 }
