--- a/src/App.css
+++ b/src/App.css
@@ -11,24 +11,29 @@ div {
 } 
 
 .header-box {
-  padding: 0px 30px;
+  width: 100%;
 }
 
 .wrap {
+  width: 100%;
   margin: 0 auto;
   display: inline-block;
 }
 
 .container {
-  padding: 20px 30px;
-  width: 1130px;
-  margin: 0 auto;
-  display: inline-block;
-  position: relative;
+  margin-top: 20px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .footer-box {
   padding: 0px 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-top: 1px solid #DEE1E6;
 }
 
 .search-box {
