--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,20 +1,22 @@
 .header {
-    width: 1130px;
+    width: 100%;
     height: 100px;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    background-color: #D7EAA3;
 }
 
 .logo {
     margin: 40px;
-    color: #D7EAA3;
+    color: white;
     font-size: 35px;
     text-decoration:none;
+    font-weight: bold;
 }
 
 .loginBtn {
     margin-right: 20px;
 }
-.logo:link {color: #D7EAA3;}
-.logo:visited { color: #D7EAA3; }
+.logo:link {color: white;}
+.logo:visited { color: white; }
