--- a/src/Components/SearchMenu/SearchMenu.css
+++ b/src/Components/SearchMenu/SearchMenu.css
@@ -55,8 +55,12 @@ input:focus {
 .searchBtn {
     width: 100px;
     background-color: white;
-    border: 3px solid black;
+    border: 2px solid black;
     border-radius: 5px;
     padding: 5px;
     margin: 0;
+}
+
+.searchBtn:hover {
+    background-color: #DEDEEA;
 }
