--- a/src/Components/MakeStudy/MakeStudy.css
+++ b/src/Components/MakeStudy/MakeStudy.css
@@ -1,7 +1,6 @@
 .makeStudy {
     width: 690px;
-    margin: 0 200px;
-    margin-top: 30px;
+    margin: 30px auto;
     padding: 0 20px;
     background-color: #D7EAA3;
     border-radius: 5px;
@@ -19,7 +18,7 @@
 
 .top-content {
     display: flex;
-    margin-bottom: 30px;
+    margin-bottom: 100px;
 }
 
 .infoBox {
@@ -123,6 +122,7 @@
 .mapBox {
     margin: auto;
     margin-bottom: 30px;
+    width: 100%;
 }
 
 .Online {
@@ -132,7 +132,7 @@
 }
 
 .finishBtn {
-    padding: 15px 50px;
+    padding: 10px 50px;
     background-color: white;
     border: 1px solid black;
     border-radius: 5px;
@@ -140,4 +140,26 @@
 
 .map {
     margin-bottom: 100px;
+}
+
+.BtnBox {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 30px;
+}
+
+.col-md-5 {
+    width: 100%;
+}
+
+.categoryBox {
+    display: flex;
+    align-items: center;
+    justify-content: left;
+}
+
+.col-md-4 {
+    margin-right: 10px;
 }
