--- a/src/Components/InfoUpdate/InfoUpdate.css
+++ b/src/Components/InfoUpdate/InfoUpdate.css
@@ -67,9 +67,9 @@ input:focus {
 }
 
 .img {
-    width: 50px;
-    height: 50px;
-    margin: auto;
+    width: 130px;
+    height: 130px;
+    margin: auto 10px;
     border: 1px solid black;
     border-radius: 90px;
     background-color: white;
@@ -119,6 +119,7 @@ input:focus {
     border: 1px solid black;
     border-radius: 5px;
     margin-right: 4px;
+    white-space : nowrap;
 }
 
 .tag-name {
