--- a/src/Components/KakaoMap/KakaoMap.css
+++ b/src/Components/KakaoMap/KakaoMap.css
@@ -1,7 +1,7 @@
 .map {
     width: 400px;
     height: 300px;
-    background-color: black;
+    background-color: white;
     margin: 0 auto;
     border-radius: 5px;
     margin-top: 30px;
@@ -39,7 +39,7 @@
 .localName-box {
     width: 500px;
     height: 25px;
-    border: 1px solid black;
+    border: 1px solid white;
 }
 
 .map {
