--- a/src/Components/SearchMenu/SearchMenu.css
+++ b/src/Components/SearchMenu/SearchMenu.css
@@ -6,7 +6,7 @@
     flex-flow: wrap;
     height: 50px;
     margin-bottom: 30px;
-    background-color: #69F0AE;
+    background-color: black;
 }
 
 .search-wrap {
