--- a/src/Components/KakaoMap/KakaoMap.css
+++ b/src/Components/KakaoMap/KakaoMap.css
@@ -1,6 +1,5 @@
 .map {
-    width: 400px;
-    height: 300px;
+    width: 100%;
     background-color: white;
     margin: 0 auto;
     border-radius: 5px;
@@ -26,10 +25,12 @@
 }
 
 .maplist {
-    width: 500px;
-    height: 500px;
+    width: 100%;
+    height: 300px;
     background-color: white;
     margin: auto;
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 .localName {
@@ -44,4 +45,35 @@
 
 .map {
     display: flex;
+}
+
+.leftMap {
+    width: 50%;
+}
+
+.selectedLocation {
+    width: 100%;
+    height: 30px;
+    background-color: white;
+    text-align: left;
+    margin-left: 10px;
+}
+
+.leftMap > .LocationSearch-box{
+    display: flex;
+    width: 100%;
+    margin: 0 auto;
+    align-items: center;
+    justify-content: center;
+}
+
+.rightMap {
+    width: 50%;
+}
+
+.rightMap > .selectedMap {
+    width: 300px;
+    height: 300px;
+    margin: 0 auto;
+    margin-top: 25px;
 }
