--- a/src/Components/MakeStudy/MakeStudy.css
+++ b/src/Components/MakeStudy/MakeStudy.css
@@ -2,7 +2,7 @@
     width: 690px;
     margin: 30px auto;
     padding: 0 20px;
-    background-color: #D7EAA3;
+    background-color: black;
     border-radius: 5px;
     padding-top: 30px;
     display: flex;
@@ -14,11 +14,12 @@
     text-align: center;
     font-size: 20px;
     font-weight: bold;
+    color: white;
 }
 
 .top-content {
     display: flex;
-    margin-bottom: 100px;
+    margin-bottom: 300px;
 }
 
 .infoBox {
@@ -50,13 +51,13 @@
     border-radius: 5px;
     background-color: white;
     text-align: center;
+    color: black;
 }
 
 .hashtagListBox {
-    display: flex;
+    display: block;
     width: 100%;
-    height: 40px;
-    overflow-x: scroll;
+    height: 200px;
 }
 
 .count {
@@ -163,3 +164,21 @@
 .col-md-4 {
     margin-right: 10px;
 }
+
+.tagName{
+    color: black;
+    background-color: white;
+    border: 1px solid white;
+    white-space: nowrap;
+    display: flex;
+    border-radius: 5px;
+    justify-content: space-between;
+}
+
+div {
+    color: white;
+}
+
+a{color: black; text-decoration: none;}
+a:visited{color: black; text-decoration: none;}
+a:link{color: black; text-decoration: none;}
