feat: 스터디 만들기 기능 조정, 지도 초기값 설정

--- a/src/Components/KakaoMap/KakaoMap.css
+++ b/src/Components/KakaoMap/KakaoMap.css
@@ -67,6 +67,10 @@
     justify-content: center;
 }
 
+.LocationSearch-box > .LocationSearchBtn {
+    color: black;
+}
+
 .rightMap {
     width: 50%;
 }
