--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -4,7 +4,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: #96b84d;
+    background-color: black;
 }
 
 .logo {
