--- a/src/Components/ManagementMember/ManagementMember.css
+++ b/src/Components/ManagementMember/ManagementMember.css
@@ -34,8 +34,11 @@
 .left-member > .Member {
     width: 100%;
     border: 1px solid black;
+    border-top: 0px;
     text-align: left;
+    padding: 5px;
     padding-left: 10px;
+    color: black;
 }
 
 .ManagementMember-list > .right-member {
@@ -54,4 +57,6 @@
 .list-title {
     font-size: 18px;
     font-weight: bold;
+    color: black;
+    border-bottom: 3px solid black;
 }
