--- a/src/Components/StudyDetail/StudyDetail.css
+++ b/src/Components/StudyDetail/StudyDetail.css
@@ -3,7 +3,7 @@
     margin: 0 200px;
     margin-top: 30px;
     padding: 20px;
-    background-color: #D7EAA3;
+    background-color: black;
     border-radius: 5px;
     display: flex;
     flex-wrap: wrap;
