--- a/src/Components/ManagementMember/ManagementMember.css
+++ b/src/Components/ManagementMember/ManagementMember.css
@@ -33,12 +33,23 @@
 
 .left-member > .Member {
     width: 100%;
-    border: 1px solid black;
+    border-bottom: 1px solid black;
     border-top: 0px;
     text-align: left;
-    padding: 5px;
-    padding-left: 10px;
+    padding: 5px 10px;
     color: black;
+    display: flex;
+    justify-content: space-between;
+}
+
+.left-member > .Member > div {
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: black;
+    padding: 2px 5px;
+    border-radius: 5px;
 }
 
 .ManagementMember-list > .right-member {
@@ -51,7 +62,26 @@
 
 .right-member > .waitUser {
     width: 100%;
-    border: 1px solid black;
+    border-bottom: 1px solid black;
+    display: flex;
+    justify-content: space-between;
+    padding: 5px 10px;
+    color: black;
+}
+
+.right-member > .waitUser > div {
+    display: flex;
+}
+
+.right-member > .waitUser > div > div{
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: black;
+    padding: 2px 5px;
+    border-radius: 5px;
+    margin-left: 10px;
 }
 
 .list-title {
