--- a/src/Components/MyPage/MyPage.css
+++ b/src/Components/MyPage/MyPage.css
@@ -60,7 +60,7 @@
 }
 
 .friendsTitle {
-    background-color: #9ebf44;
+    background-color: black;
     border: 1px solid black;
     margin-bottom: 0;
     display: flex;
@@ -88,6 +88,7 @@
     border: 1px solid black;
     padding: 3px 3px;
     white-space : nowrap;
+    color: black;
 }
 
 .info > div > .tags {
@@ -118,7 +119,7 @@
 .MyPage > .middle > .profile-box{
     width: 320px;
     height: 300px;
-    background-color: #D7EAA3;
+    background-color: black;
     margin: 0;
     border-radius: 5px;
 }
@@ -126,7 +127,7 @@
 .MyPage > .middle > .location-box{
     width: 320px;
     height: 300px;
-    background-color: #D7EAA3;
+    background-color: black;
     margin: 0;
     border-radius: 5px;
 }
@@ -138,5 +139,37 @@
 
 .top-title {
     font-weight: bold;
-    font-size: 30px;
+    font-size: 32px;
+    color: black;
+}
+
+.apply {
+    width: 100%;
+    background-color: black;
+    border-radius: 5px;
+}
+
+.apply-title {
+    font-size: 20px;
+    font-weight: 700;
+    border-bottom: 2px solid whitesmoke;
+}
+
+.apply-content {
+    width: 100%;
+}
+
+.apply-info {
+    border-bottom: 1px solid white;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    padding: 2px 10px;
+}
+
+.status-icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
 }
