--- a/src/Components/StudyDetail/StudyDetail.css
+++ b/src/Components/StudyDetail/StudyDetail.css
@@ -17,3 +17,23 @@
 .StudyDetail-IMAGE {
     width: 30%;
 }
+.StudyDetailBtn-box {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+.StudyDetailBtn-box > a{
+    display: flex;
+    background-color: white;
+    color:black;
+    padding: 2px 5px;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+}
+
+.applyCancelBtn, .applyBtn, .canNotBtn {
+    color: black;
+}
