--- a/src/Components/GatheringChat/GatheringChat.css
+++ b/src/Components/GatheringChat/GatheringChat.css
@@ -1,6 +1,7 @@
 .GatheringChat {
     display: flex;
     width: 100%;
+    overflow-y: auto;
 }
 
 .GatheringChat > aside {
@@ -15,8 +16,10 @@
     border-bottom: 3px solid black;
     width: 100%;
     height: 75vh;
-    overflow-y: scroll;
+    overflow-y: auto;
+    overflow-x: hidden;
     display: block;
+    box-sizing: border-box;
 }
 
 .GatheringChat > div > .chat-input-box {
@@ -63,4 +66,29 @@
     border-radius: 5px;
     font-size: 15px;
     font-weight: 500;
+}
+
+.right-createdAt {
+    color: black;
+    margin-bottom: 20px;
+    font-size: 8px;
+    width: 100%;
+    display: flex;
+    justify-content: right;
+}
+
+.left-createdAt {
+    color: black;
+    margin-bottom: 20px;
+    font-size: 8px;
+    width: 100%;
+    display: flex;
+    justify-content: left;
+}
+
+.chatRef {
+    width: 200px;
+    height: 20px;
+    background-color: blue;
+    margin: 0 auto;
 }
